# vertex-eval

./: .gitignore  Containerfile  Makefile  README.md  UPGRADE_2026.md  docker-compose.yml  pyproject.toml
harness_core/: .gitignore  Makefile  README.md  index.html  pyproject.toml
harness_core/src/harness_core/: __init__.py  hooks.py  loop.py  memory.py  messages.py  models.py  observability.py  permissions.py  tools.py  tools_builtin.py
harness_core/src/harness_core/constitution/: __init__.py  constitution.py
harness_core/src/harness_core/continuous_learning/: __init__.py  extractor.py  learner.py  recorder.py  types.py
harness_core/src/harness_core/cost/: __init__.py  tracker.py  types.py
harness_core/src/harness_core/distributed/: __init__.py  bus.py  types.py
harness_core/src/harness_core/eval_runner/: __init__.py  drift.py  runner.py  types.py
harness_core/src/harness_core/evals/: __init__.py  active_params.py  equal_budget.py  ttc_curve.py
harness_core/src/harness_core/examples/: __init__.py  end_to_end_demo.py
harness_core/src/harness_core/forensic/: __init__.py  replay_comparator.py
harness_core/src/harness_core/gates/: __init__.py  chain_of_note.py  dual_use.py  kg_fact.py  retraction.py
harness_core/src/harness_core/integrations/: __init__.py  external_graph.py
harness_core/src/harness_core/isolation/: __init__.py  context_namespace.py
harness_core/src/harness_core/marketplace/: __init__.py  protocols.py  stub_adapter.py  types.py
harness_core/src/harness_core/memory_consolidation/: __init__.py  consolidator.py  grouping.py  summarizer.py  (+1 more)
harness_core/tests/: test_beam_and_dualuse.py  test_continuous_learning.py  test_cost.py  test_distributed.py  test_end_to_end_demo.py  test_eval_runner.py  test_evals.py  test_gates.py  test_hooks.py  test_integration_end_to_end.py  test_kg_fact.py  test_loop.py  test_marketplace_and_constitution.py  test_memory.py  test_memory_consolidation.py  test_memory_store.py  test_messages.py  test_models.py  test_multi_hop.py  test_observability.py  test_operators.py  test_orchestration.py  test_pages_and_integrations.py  test_permissions.py  test_pipeline.py  test_programs.py  test_provenance.py  test_render.py  test_replay.py  test_routines.py  test_routing.py  test_safety_discipline.py  test_skill_auto.py  test_skill_drift.py  test_teams.py  test_tier1_multi_hop.py  test_tool_runtime.py  test_tools.py  test_verifier.py
(+121 files in other folders)
