[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertex-eval"
version = "0.1.0"
description = "Vertex-Eval: third-party agent evaluation platform — cross-channel evidence, Pass^k SLA, HORIZON attribution, LaStraj federation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "harness-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "harness-tui",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.26"]


[project.scripts]
vertex-eval = "vertex_eval.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
