[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-core"
version = "0.1.0"
description = "Shared harness primitives: agent loop, tools, hooks, permissions, memory, observability"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
